commit with push to github

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.validJSON {
+  background-color: green;
+  width: 100px;
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.validJSON:before {
+  content: 'Valid JSON'
+}
+
+.invalidJSON {
+  background-color: red;
+  width: 100px;
+  height: 50px;
+}
+
+.invalidJSON:before {
+  content: 'Invalid JSON'
+}
+
+.editor {
+  margin: 20px;
+}
+
+.node {
+  border: 1px solid black;
+  padding: 10px;
+  margin: 5px;
+  width: auto;
+  height: auto;
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+}
+
+.leaf {
+  border: 1px dotted black;
+  background-color: green;
+}
+
+.text-field {
+  width: 75%;
+}
+
+.selected {
+  border: 5px solid red;
+}
+
+input {
+  width: 100px;
+  height: 100px;
 }
